// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeaderboardEntry matches snapshot when highlighted 1`] = `
<View
  accessibilityHint="This is your position on the leaderboard"
  accessibilityLabel="Alice Smith, Rank 1, 200 points"
  accessibilityRole="text"
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 4,
        "elevation": 1,
        "marginBottom": 8,
        "marginHorizontal": 16,
        "shadowColor": "#1C1B1F",
        "shadowOffset": {
          "height": 0.5,
          "width": 0,
        },
        "shadowOpacity": 0.05,
        "shadowRadius": 1,
      },
      {
        "backgroundColor": "#E8DEF8",
      },
    ]
  }
  testID="leaderboard-entry"
>
  <Animated.View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "padding": 16,
        },
        {
          "transform": [
            {
              "scale": AnimatedValue {
                "_listeners": [],
                "_value": 1,
              },
            },
          ],
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "marginRight": 12,
          "width": 32,
        }
      }
    >
      <Animated.Text
        accessibilityLabel="Rank 1"
        style={
          [
            {
              "color": "#1C1B1F",
              "fontSize": 22,
              "fontWeight": "400",
            },
            {
              "color": "#6200EE",
            },
            {
              "transform": [
                {
                  "translateY": {
                    "__getValue": [Function],
                    "_interpolation": {
                      "inputRange": [
                        0,
                        1,
                        2,
                      ],
                      "outputRange": [
                        -20,
                        0,
                        20,
                      ],
                    },
                  },
                },
              ],
            },
          ]
        }
        testID="rank-text"
      >
        1
      </Animated.Text>
    </View>
    <View
      style={
        {
          "marginRight": 12,
        }
      }
    >
      <Image
        defaultSource="mocked-favicon-path"
        source={
          {
            "uri": "https://example.com/alice-avatar.jpg",
          }
        }
        style={
          {
            "borderRadius": 24,
            "height": 48,
            "width": 48,
          }
        }
        testID="avatar-image"
      />
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        accessibilityLabel="Alice Smith"
        style={
          [
            {
              "color": "#1C1B1F",
              "fontSize": 16,
              "fontWeight": "500",
            },
            {
              "color": "#6200EE",
            },
          ]
        }
        testID="display-name"
      >
        Alice Smith
      </Text>
      <Animated.Text
        accessibilityLabel="200 points"
        style={
          [
            {
              "color": "#49454F",
              "fontSize": 14,
              "fontWeight": "400",
            },
            {
              "color": "#6200EE",
            },
            {
              "transform": [
                {
                  "translateY": {
                    "__getValue": [Function],
                    "_interpolation": {
                      "inputRange": [
                        100,
                        200,
                        300,
                      ],
                      "outputRange": [
                        -20,
                        0,
                        20,
                      ],
                    },
                  },
                },
              ],
            },
          ]
        }
        testID="points-text"
      >
        200
         pts
      </Animated.Text>
    </View>
  </Animated.View>
</View>
`;

exports[`LeaderboardEntry matches snapshot with avatar 1`] = `
<View
  accessibilityLabel="Alice Smith, Rank 1, 200 points"
  accessibilityRole="text"
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 4,
        "elevation": 1,
        "marginBottom": 8,
        "marginHorizontal": 16,
        "shadowColor": "#1C1B1F",
        "shadowOffset": {
          "height": 0.5,
          "width": 0,
        },
        "shadowOpacity": 0.05,
        "shadowRadius": 1,
      },
      undefined,
    ]
  }
  testID="leaderboard-entry"
>
  <Animated.View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "padding": 16,
        },
        {
          "transform": [
            {
              "scale": AnimatedValue {
                "_listeners": [],
                "_value": 1,
              },
            },
          ],
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "marginRight": 12,
          "width": 32,
        }
      }
    >
      <Animated.Text
        accessibilityLabel="Rank 1"
        style={
          [
            {
              "color": "#1C1B1F",
              "fontSize": 22,
              "fontWeight": "400",
            },
            undefined,
            {
              "transform": [
                {
                  "translateY": {
                    "__getValue": [Function],
                    "_interpolation": {
                      "inputRange": [
                        0,
                        1,
                        2,
                      ],
                      "outputRange": [
                        -20,
                        0,
                        20,
                      ],
                    },
                  },
                },
              ],
            },
          ]
        }
        testID="rank-text"
      >
        1
      </Animated.Text>
    </View>
    <View
      style={
        {
          "marginRight": 12,
        }
      }
    >
      <Image
        defaultSource="mocked-favicon-path"
        source={
          {
            "uri": "https://example.com/alice-avatar.jpg",
          }
        }
        style={
          {
            "borderRadius": 24,
            "height": 48,
            "width": 48,
          }
        }
        testID="avatar-image"
      />
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        accessibilityLabel="Alice Smith"
        style={
          [
            {
              "color": "#1C1B1F",
              "fontSize": 16,
              "fontWeight": "500",
            },
            undefined,
          ]
        }
        testID="display-name"
      >
        Alice Smith
      </Text>
      <Animated.Text
        accessibilityLabel="200 points"
        style={
          [
            {
              "color": "#49454F",
              "fontSize": 14,
              "fontWeight": "400",
            },
            undefined,
            {
              "transform": [
                {
                  "translateY": {
                    "__getValue": [Function],
                    "_interpolation": {
                      "inputRange": [
                        100,
                        200,
                        300,
                      ],
                      "outputRange": [
                        -20,
                        0,
                        20,
                      ],
                    },
                  },
                },
              ],
            },
          ]
        }
        testID="points-text"
      >
        200
         pts
      </Animated.Text>
    </View>
  </Animated.View>
</View>
`;

exports[`LeaderboardEntry matches snapshot without avatar 1`] = `
<View
  accessibilityLabel="Bob Johnson, Rank 3, 100 points"
  accessibilityRole="text"
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 4,
        "elevation": 1,
        "marginBottom": 8,
        "marginHorizontal": 16,
        "shadowColor": "#1C1B1F",
        "shadowOffset": {
          "height": 0.5,
          "width": 0,
        },
        "shadowOpacity": 0.05,
        "shadowRadius": 1,
      },
      undefined,
    ]
  }
  testID="leaderboard-entry"
>
  <Animated.View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "padding": 16,
        },
        {
          "transform": [
            {
              "scale": AnimatedValue {
                "_listeners": [],
                "_value": 1,
              },
            },
          ],
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "marginRight": 12,
          "width": 32,
        }
      }
    >
      <Animated.Text
        accessibilityLabel="Rank 3"
        style={
          [
            {
              "color": "#1C1B1F",
              "fontSize": 22,
              "fontWeight": "400",
            },
            undefined,
            {
              "transform": [
                {
                  "translateY": {
                    "__getValue": [Function],
                    "_interpolation": {
                      "inputRange": [
                        2,
                        3,
                        4,
                      ],
                      "outputRange": [
                        -20,
                        0,
                        20,
                      ],
                    },
                  },
                },
              ],
            },
          ]
        }
        testID="rank-text"
      >
        3
      </Animated.Text>
    </View>
    <View
      style={
        {
          "marginRight": 12,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#E7E0EC",
            "borderRadius": 24,
            "height": 48,
            "justifyContent": "center",
            "width": 48,
          }
        }
        testID="avatar-placeholder"
      >
        <Text
          style={
            [
              {
                "color": "#49454F",
                "fontSize": 22,
                "fontWeight": "400",
              },
              undefined,
            ]
          }
        >
          B
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        accessibilityLabel="Bob Johnson"
        style={
          [
            {
              "color": "#1C1B1F",
              "fontSize": 16,
              "fontWeight": "500",
            },
            undefined,
          ]
        }
        testID="display-name"
      >
        Bob Johnson
      </Text>
      <Animated.Text
        accessibilityLabel="100 points"
        style={
          [
            {
              "color": "#49454F",
              "fontSize": 14,
              "fontWeight": "400",
            },
            undefined,
            {
              "transform": [
                {
                  "translateY": {
                    "__getValue": [Function],
                    "_interpolation": {
                      "inputRange": [
                        0,
                        100,
                        200,
                      ],
                      "outputRange": [
                        -20,
                        0,
                        20,
                      ],
                    },
                  },
                },
              ],
            },
          ]
        }
        testID="points-text"
      >
        100
         pts
      </Animated.Text>
    </View>
  </Animated.View>
</View>
`;
